--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "i18next-browser-languagedetector": "^8.2.0",
     "notistack": "^3.0.2",
     "react": "^19.1.0",
+    "react-countdown": "^2.3.6",
     "react-dom": "^19.1.0",
     "react-error-boundary": "^6.0.0",
     "react-i18next": "^15.5.3",
